samples/_failures_safe/1761145522_a6acbe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b03b5b7f.c: In function ‘main’:
./samples/SAFE/__tmp_b03b5b7f.c:145:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  145 |     size_t decompressed
      |     ^~~~~~
./samples/SAFE/__tmp_b03b5b7f.c:145:5: error: expected declaration or statement at end of input
